# party

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-package.yml
party/: cli.py  common.py  notes.py  posts.py  user.py
