[tool.poetry]
name = "kemono"
version = "0.1.0"
description = ""
authors = ["darkdragn <darkdragn.cj@gmail.com>"]
packages = [
    { include = "party" },
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
tqdm = "^4.62.3"
python-dateutil = "^2.8.2"
typer = "^0.4.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
jedi = "^0.18.1"
commitizen = "^2.20.4"

[tool.poetry.scripts]
party = 'party.notes:APP'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
