[tool.commitizen]
name = "cz_conventional_commits"
version = "0.6.1"
tag_format = "v$version"
version_files = [
  "pyproject.toml:version",
]

[tool.poetry]
name = "party"
version = "0.6.1"
description = ""
authors = ["darkdragn <darkdragn.cj@gmail.com>"]
packages = [
    { include = "party" },
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
tqdm = "^4.62.3"
python-dateutil = "^2.8.2"
typer = "^0.9.0"
loguru = "^0.5.3"
marshmallow = "^3.14.1"
aiohttp = "^3.8.1"
aiofiles = "^0.8.0"
prettytable = "^3.0.0"
simplejson = "^3.17.6"
yaspin = "^2.1.0"
desert = "^2020.11.18"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
jedi = "^0.18.1"
commitizen = "^2.20.4"
pre-commit = "^2.17.0"
black = {version = "^22.1.0", allow-prereleases = true}
pdoc = "^10.0.1"

[tool.poetry.scripts]
party = 'party.cli:APP'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
